# old-times

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GRAPHICS_GUIDE.md  LICENSE  Makefile  README.md  SECURITY.md  justfile  lcov.info  requirements.txt  test_map.ron
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: asset_issue.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/data/: buildings.toml  mapgen.toml  recipes.toml  sprites.toml  workers.toml
crates/oldtimes-client/: Cargo.toml  README.md  assets
crates/oldtimes-client/src/: input.rs  main.rs  rendering.rs  ui.rs
crates/oldtimes-client/src/plugins/: build_mode.rs  camera.rs  debug.rs  economy.rs  map.rs  mod.rs  ui.rs
crates/oldtimes-core/: Cargo.toml  README.md
crates/oldtimes-core/src/: assets.rs  components.rs  data.rs  economy.rs  events.rs  lib.rs  map.rs  pathfinding.rs  resources.rs  save.rs  simulation.rs
crates/oldtimes-core/src/systems/: construction.rs  mod.rs  pathfinding.rs  production.rs  tick.rs  transport.rs  worker.rs
crates/oldtimes-headless/: Cargo.toml  README.md
crates/oldtimes-headless/src/: main.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATA_FORMATS.md  DESIGN.md
examples/: README.md
examples/asset_pipeline/: README.md  ai-generation.toml  basic.toml  ci-cd.toml  development.toml  high-quality.toml  kenney-only.toml  mixed-sources.toml  mod-development.toml  performance.toml  production.toml
examples/asset_specifications/: README.md  animation_spec.toml  asset_spec.toml
examples/cli_usage/: README.md  basic_workflow.sh  development_workflow.sh  mod_development_workflow.sh
examples/mods/: README.md
examples/mods/advanced_mod/: README.md  mod.toml
examples/mods/basic_mod/: README.md  mod.toml
mods/example/: buildings.toml  mod.toml  recipes.toml  workers.toml
scripts/: asset_pipeline.py  asset_pipeline.toml  benchmark.sh  generate_map.py  generate_sprites.py  requirements.txt  test_pipeline.py  validate_data.sh
scripts/asset_pipeline/: __init__.py  cli.py  config.py  pipeline.py
scripts/asset_pipeline/processing/: __init__.py  atlas.py  metadata.py  mod.py  normalizer.py  preview.py  validator.py
scripts/asset_pipeline/providers/: __init__.py  ai_providers.py  base.py  kenney.py
scripts/asset_pipeline/templates/: mod.toml.j2  sprites.toml.j2
scripts/asset_pipeline/tests/: __init__.py  test_ai_providers.py  test_atlas_generation.py  test_atlas_integration.py  (+15 more)
(+5 files in other folders)
