[workspace]
members = [
    "crates/oldtimes-core",
    "crates/oldtimes-headless", 
    "crates/oldtimes-client"
]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.14", default-features = false, features = ["bevy_core_pipeline", "bevy_sprite", "bevy_text", "bevy_ui", "bevy_render", "png", "x11"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
noise = "0.8"
pathfinding = "4.0"
rayon = "1.7"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
panic = "abort"