[package]
name = "oldtimes-core"
version = "0.1.0"
edition = "2021"
description = "Headless simulation engine for Old Times RTS game"
license = "MIT"

[dependencies]
bevy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
noise = { workspace = true }
pathfinding = { workspace = true }
rayon = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
profiling = []